--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,20 @@
+server:
+  port: 8080
+#spring:
+#  datasource:
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://localhost:5432/postgres
+#    password: postgres
+#    username: postgres
+#  jpa:
+#    hibernate:
+#      ddl-auto: create-drop
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.PostgreSQLDialect
+#    show-sql: true
+#  liquibase:
+#    change-log: classpath:db/changelog/master.xml
 spring:
   datasource:
     driver-class-name: org.h2.Driver
@@ -17,3 +34,5 @@ spring:
     console:
       enabled: true
       path: /h2
+
+
