--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,38 +1,38 @@
 server:
   port: 8080
-spring:
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres
-    password: postgres
-    username: postgres
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: true
-  liquibase:
-    change-log: classpath:db/changelog/master.xml
 #spring:
 #  datasource:
-#    driver-class-name: org.h2.Driver
-#    url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
-#    username: sa
-#    password:
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://localhost:5432/postgres
+#    password: postgres
+#    username: postgres
 #  jpa:
+#    hibernate:
+#      ddl-auto: create-drop
 #    properties:
 #      hibernate:
-#        generate_statistic: true
-#    hibernate:
-#      ddl-auto: none
+#        dialect: org.hibernate.dialect.PostgreSQLDialect
 #    show-sql: true
 #  liquibase:
 #    change-log: classpath:db/changelog/master.xml
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
+  jpa:
+    properties:
+      hibernate:
+        generate_statistic: true
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+  liquibase:
+    change-log: classpath:db/changelog/master.xml
+  h2:
+    console:
+      enabled: true
+      path: /h2
 
 
