--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/db;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:~/db1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
   jpa:
